// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI TUI command > keeps wide and narrow terminal render snapshots stable > narrow command palette 1`] = `
"Agent Hub  TUI Project  #review  @agent  ctx runtime_injection  i...
[Work]  Graph  Runs  Review  Tasks  Memory  Help

Command Palette
  Current context
    focus work
    command agent-hub role-calls show call_parent
  Runs
    agent-hub runs show run_1
    agent-hub runs diff run_1 --stat
    agent-hub risks show run_1
  RoleCalls
    agent-hub role-calls show call_parent
  Review
    agent-hub role-calls show call_child
  Memory
    agent-hub memory list --project-id project_1
    agent-hub memory approve <memory-id>
    agent-hub memory reject <memory-id>
  Keys
    : close palette
    p print focused command
    ctrl+j submit composer

Actions: tab focus  enter open  : palette  c continue  k cancel  ...
> @agent prompt
"
`;

exports[`CLI TUI command > keeps wide and narrow terminal render snapshots stable > wide command palette 1`] = `
"Agent Hub  TUI Project  #review  @agent  ctx runtime_injection  iter 0/4  risk unknown
[Work]  Graph  Runs  Review  Tasks  Memory  Help

Command Palette
  Current context
    focus work
    command agent-hub role-calls show call_parent
  Runs
    agent-hub runs show run_1
    agent-hub runs diff run_1 --stat
    agent-hub risks show run_1
  RoleCalls
    agent-hub role-calls show call_parent
  Review
    agent-hub role-calls show call_child
  Memory
    agent-hub memory list --project-id project_1
    agent-hub memory approve <memory-id>
    agent-hub memory reject <memory-id>
  Keys
    : close palette
    p print focused command
    ctrl+j submit composer

Actions: tab focus  enter open  : palette  c continue  k cancel  a accept  j reject  p commands  ctrl+j submit  r rev...
> @agent prompt
"
`;
